dataset1235/2025-2/2868285114/users/154215138/executions/2135592949_2149359571.log
== RUN (2025-08-14 13:38:07)
-- CODE: 
T = 90
H = 55
print("Fredegunda deve pagar", T - H "R$")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 3
    print("Fredegunda deve pagar", T - H "R$")
                                   ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 3
    print("Fredegunda deve pagar", T - H "R$")
                                   ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:44:58)
-- CODE: 
T = 90
H = 55
D = T - H
print("Fredebunga deve pagar {}R$". format(D))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredebunga deve pagar 35R$
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredebunga deve pagar 35R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:46:19)
-- CODE: 
T = 90
H = 55
D = T - H
print(D)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 13:59:35)
-- CODE: 
conta_total = 90
valor_pago_heraclito = 55
D = conta_total - valor_pago_heraclito
print(f"Fredegunda deve pagar R$ {D}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar R$ 35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar R$ 35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:47:10)
-- CODE: 
T = 90
H = 55
D = T - H
int(print(D))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(print(D))
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'NoneType'
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(print(D))
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:44:50)
-- CODE: 
T = 90
H = 55
D = T - H
print("Fredebunga deve pagar {} R$". format(D))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredebunga deve pagar 35 R$
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredebunga deve pagar 35 R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:44:23)
-- CODE: 
T = 90
H = 55
D = T - H
print("Fredebunga deve pagar {}". format(D))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredebunga deve pagar 35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredebunga deve pagar 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:42:02)
-- CODE: 
T = 90
H = 55
D = T - H
print("Fredebunga deve pagar". format(D))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredebunga deve pagar
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredebunga deve pagar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:51:57)
-- CODE: 
conta_total = 90
valor_pago_heraclito = 55
D = conta_total - valor_pago_heraclito
print(f"Fredegunda deve pagar R$ {D}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar R$ 35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredegunda deve pagar R$ 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
